@@ -1,3 +1,6 @@
+Apr 06, 2007: Ludwig Nussel <l-n@users.sourceforge.net>
+- add q3ut4 game types (#1693170)
+
 Jan 09, 2007: Ludwig Nussel <l-n@users.sourceforge.net>
 - use g_object_unref instead of gtk_object_unref for GTK2 (#1629598)
 
